# aoc

./: .gitignore
2022/: .gitignore  CMakeLists.txt  CMakePresets.json
2022/day1/: Cargo.toml
2022/day1/src/: main.rs
2022/day2/src/: main.rs
2022/day3/src/: main.rs
2022/day4/src/: main.rs
2022/day5/src/: main.rs
2022/day6/: cmakelists.txt  day6.cpp  day6.hpp  day6_test.cpp  main.cpp
2022/day7/: CMakeLists.txt  day7.cpp  day7.h  day7_test.cpp  main.cpp  test.cpp
2022/day7/day7/: day7.cpp  day7.h  mydir.cpp  mydir.h  myfile.cpp  myfile.h
2022/day7/day7/include/: day7.h  mydir.h  myfile.h  myfilesystem.h
2022/day7/day7/src/: day7.cpp  mydir.cpp  myfile.cpp  myfilesystem.cpp
2022/day7/day7client/: CMakeLists.txt
2022/day7/day7lib/: CMakeLists.txt
2022/day7/day7lib/include/: day7.h  mydir.h  myfile.h  myfilesystem.h
2022/day7/day7lib/src/: day7.cpp  mydir.cpp  myfile.cpp  myfilesystem.cpp
2022/day8/: CMakeLists.txt  main.cpp  test.cpp
2022/day8/day8lib/: CMakeLists.txt  day8lib.cpp  day8lib.h
2022/day8/day8lib/include/: day8lib.h  forest.h  sightline.h  tree.h
2022/day8/day8lib/src/: day8lib.cpp  forest.cpp  sightline.cpp  tree.cpp
2022/day8/src/: main.cpp  test.cpp
